final push css with whitenoise for static, etc for prod

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
-.env
 # Python
 __pycache__/
 *.pyc
 *.pyo
 *.pyd
 *.db
-*.sqlite3
+#*.sqlite3      <-- COMMENTED OUT so SQLite DB is tracked
 
 # Virtual Environment
 venv/
@@ -14,9 +13,8 @@ myenv/
 # Django
 *.log
 *.pot
-*.pyc
 *.mo
-*.sqlite3
+#*.sqlite3      <-- COMMENTED OUT so SQLite DB is tracked
 
 # Node / Tailwind (if any)
 node_modules/
