--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.11.0
 certifi==2025.11.12
 charset-normalizer==3.4.4
 Django==5.2.9
+django-environ==0.12.0
 django-tailwind==4.4.1
 gunicorn==23.0.0
 idna==3.11
@@ -11,3 +12,4 @@ python-dotenv==1.2.1
 requests==2.32.5
 sqlparse==0.5.4
 urllib3==2.5.0
+whitenoise==6.11.0
